--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "keywords": [
     "Web",
@@ -18,6 +19,11 @@
   "author": "Hanson Chieu",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "daisyui": "^4.12.12",
     "express": "^4.21.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.13"
   }
 }
