--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "eCommerce web app that uses multiple routes, serves static files and a \"store service\" module for accessing data",
   "main": "server.js",
   "scripts": {
+    "prettier": "prettier --write \"**/*.{js,css,html}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css"
@@ -24,6 +25,7 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13"
   }
 }
