--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "cloudinary": "^2.5.1",
     "daisyui": "^4.12.12",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
