--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "cloudinary": "^2.5.1",
-    "daisyui": "^4.12.12",
+    "daisyui": "^4.12.14",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-ejs-layouts": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.15"
   }
 }
