--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eCommerce web app that uses multiple routes, serves static files and a \"store service\" module for accessing data",
   "main": "server.js",
   "scripts": {
-    "prettier": "prettier --write \"**/*.{js,css,html}\"",
+    "prettier": "prettier --write \"**/*.{js,css,html,ejs}\" --parser html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css"
@@ -27,10 +27,14 @@
     "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
+    "prettier-plugin-ejs": "^1.0.3",
     "tailwindcss": "^3.4.15"
   }
 }
