--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "client-sessions": "^0.8.0",
     "cloudinary": "^2.5.1",
     "daisyui": "^4.12.14",
     "ejs": "^3.1.10",
-    "express": "^4.21.0",
+    "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
