--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Hanson Chieu",
   "license": "ISC",
   "dependencies": {
+    "14": "^3.1.6",
     "@tailwindcss/typography": "^0.5.15",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -31,16 +32,20 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "mongodb": "^6.12.0",
+    "mongodb-client-encryption": "^6.1.1",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "streamifier": "^0.1.1"
+    "serve": "^13.0.0",
+    "socks": "^2.7.1",
+    "streamifier": "^0.1.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
     "prettier-plugin-ejs": "^1.0.3",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.16"
   }
 }
