--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-ejs": "^1.0.3",
     "tailwindcss": "^3.4.16"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
